<resources>
    <string name="app_name">DnD App</string>
    <string name="title_home">Home</string>
    <string name="title_character">Character</string>
    <string name="title_bag">Bag</string>
    <string name="title_spells">Spells</string>
    <string name="title_my_characters">My characters</string>
    <string name="delete_character">Delete character</string>
    <string name="title_notes">Notes</string>
    <string name="title_settings">Settings</string>
    <string name="stat_strength_name">Str</string>
    <string name="stat_dexterity_name">Dex</string>
    <string name="stat_intelligence_name">Int</string>
    <string name="stat_wisdom_name">Wis</string>
    <string name="stat_charisma_name">Char</string>
    <string name="stat_constitution_name">Con</string>
    <string name="stat_placeholder">10</string>
    <string name="save_mod_placeholder">+%1s</string>
    <string name="name_save">Save</string>
    <string name="title_mod">Mod</string>
    <string name="title_spells_known">Known</string>
    <string name="title_spells_prepared">Prepared</string>
    <string name="title_character_description">Description</string>
    <string name="title_character_features_traits">Features and Traits</string>
    <string name="notes_hint">Notes:</string>
    <string name="saving_text">Saving…</string>
    <string name="saved_text">Saved!</string>
    <string name="notes_placeholder">Type here…</string>
    <string name="title_dice">Clickety clackety math rocks</string>
    <string name="title_combat">Combat</string>
    <string name="level_indicator">Level: %1s</string>
    <string name="name_placeholder">Character Name</string>
    <string name="hp_text">HP: %1s</string>
    <string name="class_race_placeholder">Class Race</string>
    <string name="title_background">Background</string>
    <string name="placeholder_background">YOUR BACKGROUND</string>
    <string name="background_info_placeholder">Background info</string>
    <string name="made_by">Made by: Iris Oostra</string>
    <string name="character_in_list">%1s Level: %2s</string>
    <string name="already_selected">You have already selected this character</string>
    <string name="error">Error!</string>
    <string name="title_race">Race</string>
    <string name="title_subrace">Subrace</string>
    <string name="title_class">Class</string>
    <string name="next_button">Next</string>
    <string name="add_character">Add character</string>
    <string name="dice_text">Dice</string>
    <string name="title_rest">Rest</string>
    <string name="title_damage">Damage</string>
    <string name="title_heal">Heal</string>
    <string name="background_stat_description">Background image for stat</string>
    <string name="ac_title">AC</string>
    <string name="title_speed">Speed</string>
    <string name="title_initiative">Initiative</string>
    <string name="select_subrace">Select a subrace</string>
    <string name="previous">Previous</string>
    <string name="select_stats">Select the stats</string>
    <string name="racial_stat_bonus">Racial stat bonus:</string>
    <string name="title_alignment">Alignment</string>
    <string name="title_gender">Gender</string>
    <string name="item_placeholder">Item</string>
    <string name="title_item_amount">Amount</string>
    <string name="title_item_name">Item name</string>
    <string name="title_item_weight">Weight</string>
    <string name="points_left">Points left: %1s</string>
    <string name="title_add">Add</string>
    <string name="title_add_item">Add item</string>
    <string name="start_stat">8</string>

    <string-array name="genders">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <string-array name="alignments">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>


    <!-- TODO: Add placeholder text for all images! -->
</resources>