<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splash_screen">

    <fragment
        android:id="@+id/splash_screen"
        android:name="com.example.dndapp.ui.extra.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_extra_splash"/>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dndapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.example.dndapp.ui.character.CharacterFragment"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/navigation_bag"
        android:name="com.example.dndapp.ui.bag.BagFragment"
        android:label="@string/title_bag"
        tools:layout="@layout/fragment_bag" />

    <fragment
        android:id="@+id/navigation_spells"
        android:name="com.example.dndapp.ui.spells.SpellsFragment"
        android:label="@string/title_spells"
        tools:layout="@layout/fragment_spells" />

    <fragment
        android:id="@+id/navigation_extra_characters"
        android:name="com.example.dndapp.ui.extra.characters.CharactersFragment"
        android:label="@string/title_my_characters"
        tools:layout="@layout/fragment_extra_characters" />

    <fragment
        android:id="@+id/navigation_extra_notes"
        android:name="com.example.dndapp.ui.extra.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_extra_notes" />

    <fragment
        android:id="@+id/navigation_extra_settings"
        android:name="com.example.dndapp.ui.extra.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_extra_settings" />

    <fragment
        android:id="@+id/navigation_extra_dice"
        android:name="com.example.dndapp.ui.extra.dice.DiceFragment"
        android:label="@string/title_dice"
        tools:layout="@layout/fragment_extra_dice" />

    <fragment
        android:id="@+id/navigation_extra_combat"
        android:name="com.example.dndapp.ui.extra.combat.CombatFragment"
        android:label="@string/title_combat"
        tools:layout="@layout/fragment_extra_combat" />
</navigation>